<resources>
    <string name="app_name">CaptureBehavioural</string>
    <string name="email_empty_error">Introduzca antes el email del usuario</string>
    <string name="email_error">El email introducido no es válido. Pruebe otro.</string>
    <string name="text_email">Introduzca su email.</string>
    <string name="consent_title_1">Gradiant Behavioural  Verification Database</string>
    <string name="consent_title_2">Consentimiento de captura de datos para la base de datos GBVD (Gradiant Behavioural  Verification Database)</string>
    <string name="consent_description">
        Firmando el presente documento, entiendo y consiento de forma libre y voluntaria que mis datos personales, incluyendo rasgos biométricos consistentes en datos de comportamiento extraídos de mi interacción con el móvil (datos de acelerómetros, giroscopio, gestos, scroll y escritura), nombre y datos de contacto (teléfono, dirección postal y correo electrónico), serán adquiridos, procesados y utilizados por el Centro Tecnolóxico de Telecomunicacións de Galicia, Gradiant, Carretera do Vilar nº 56-58, 36214 Vigo, Pontevedra, España, como controlador de la base de datos biométricos GBVD y en su condición de responsable de tratamiento de datos (en adelante Gradiant), de acuerdo con las leyes vigentes y con lo que se expone en el presente documento.\n

El objetivo de GBVD (Gradiant Behavioural Verification Database) es el de ser utilizada como referencia para el desarrollo y evaluación de un sistema biométrico de verificación de usuario, utilizándose los datos de comportamiento para desarrollar y diseñar diferentes algoritmos de reconocimiento y realizar experimentos comparativos sobre el rendimiento de los mismos.
        Estos desarrollos serán realizados por Gradiant, y se utilizará infraestructura propia y dedicada ubicada en el Centro de Supercomputación de Galicia (CESGA). Los datos de contacto recogidos serán almacenados con la finalidad de realizar cualquier comunicación o notificación que fuese necesaria y para garantizar la trazabilidad de los datos biométricos en caso de que se desee llevar a cabo un borrado, obtención o rectificación de los mismos. \n\n

Las medidas organizativas y de seguridad y los esquemas de protección de datos implementados por el controlador, se mantendrán durante la creación y distribución de la base de datos, siguiendo siempre las líneas impuestas por las respectivas Agencias Nacionales de Protección de Datos: \n\n

    </string>
    <string name="consent_link">
        <a href="http://ec.europa.eu/justice_home/fsj/privacy/nationalcomm/index_en.html">http://ec.europa.eu/justice_home/fsj/privacy/nationalcomm/index_en.html</a>
    </string>
    <string name="consent_1">
        Doy mi consentimiento para la captura y uso de los datos biométricos por parte de Gradiant en los términos arriba descritos. En caso de recogerse mis datos de forma remota, entiendo que el formulario en el que se han recogido los datos será escaneado y enviado a Gradiant de forma telemática.
    </string>
    <string name="consent_2">
        Entiendo que la aportación de mis datos personales incluyendo los datos biométricos es voluntaria. Si no estoy de acuerdo con aportar los datos mencionados anteriormente, entiendo que no puedo participar como voluntario en la campaña de adquisición.
    </string>
    <string name="consent_3">
        Entiendo que si los datos y resultados científicos fueran publicados, mi identidad permanecerá en todo caso confidencial.
    </string>
    <string name="consent_4">
        Entiendo que la administración de mis datos personales y su utilización serán llevados a cabo por el controlador de la base de datos y responsable del tratamiento  (Gradiant).
    </string>
    <string name="consent_5">
        Tengo derecho a solicitar acceso a mis datos personales, y a corregir y borrar, si es pertinente, mis datos personales de acuerdo con la legislación vigente. Con este objeto, puedo contactar con el controlador Gradiant mediante la dirección de correo electrónico biometrics.support@gradiant.org o en la dirección arriba indicada
    </string>
    <string name="consent_form">
        He leído todo lo anteriormente expuesto y entiendo que disfruto de entera libertad para manifestar mi consentimiento, o no, con respecto a la adquisición y posterior procesamiento de mis datos biométricos y personales. Mediante la firma del presente documento, manifiesto y doy mi consentimiento de acuerdo a lo indicado anteriormente.
    </string>
    <string name="error_consent">Necesita aceptar todos los consentimientos para utilizar esta aplicación"</string>
    <string name="feedbackemail">Email</string>
    <string name="feedbackname">Nombre</string>
    <string name="feedbacklastname">Apellidos</string>
    <string name="feedbackaddress">Dirección</string>
    <string name="feedbackphone">Teléfono</string>
    <string name="error_empty">Los campos de nombre y apellidos son obligatorios"</string>
    <string name="season_title">Captura de datos</string>
    <string name="new_sesion">Si quieres empezar una nueva sesión, seleccione el número de sesión y la posición en la que se encuentra.</string>
    <string name="text_sesion">Sesión:</string>
    <string name="sesion">Sesion</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="position">Posición:</string>
    <string name="sit">Sentado</string>
    <string name="up">De pie</string>
    <string name="this_info"><u>esta información</u></string>
    <string name="title_politics">Descripción</string>
</resources>