<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.consent.ConsentFragment">

    <TextView
        android:id="@+id/tvConsentTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="20sp"
        android:visibility="visible"
        android:padding="@dimen/margin_20"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/consent_title_2"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvConsentTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clInfo"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvTitle"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="Rellene los siguientes campos">
            </TextView>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editTextName"
                android:layout_height="wrap_content"
                android:hint="@string/feedbackname"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:inputType="textEmailAddress"
                android:layout_margin="@dimen/margin_32"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitle"
                android:layout_width="match_parent">
            </androidx.appcompat.widget.AppCompatEditText>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editTextLastname"
                android:layout_height="wrap_content"
                android:hint="@string/feedbacklastname"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:inputType="textEmailAddress"
                android:layout_margin="@dimen/margin_32"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editTextName"
                android:layout_width="match_parent">
            </androidx.appcompat.widget.AppCompatEditText>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editTextAddress"
                android:layout_height="wrap_content"
                android:hint="@string/feedbackaddress"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:inputType="textEmailAddress"
                android:layout_margin="@dimen/margin_32"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editTextLastname"
                android:layout_width="match_parent">
            </androidx.appcompat.widget.AppCompatEditText>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editTextPhone"
                android:layout_height="wrap_content"
                android:hint="@string/feedbackphone"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:inputType="textEmailAddress"
                android:layout_margin="@dimen/margin_32"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editTextAddress"
                android:layout_width="match_parent">
            </androidx.appcompat.widget.AppCompatEditText>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <CheckBox
        android:id="@+id/cbConsent1"
        android:gravity="top"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_20"
        android:paddingEnd="@dimen/margin_32"
        android:paddingTop="@dimen/margin_5"
        android:paddingStart="@dimen/margin_10"
        android:layout_marginStart="@dimen/margin_32"
        app:layout_constraintTop_toBottomOf="@id/tvConsentTitle"
        android:text="@string/consent_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <CheckBox
        android:id="@+id/cbConsent2"
        android:gravity="top"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_20"
        android:paddingEnd="@dimen/margin_32"
        android:paddingTop="@dimen/margin_5"
        android:paddingStart="@dimen/margin_10"
        android:layout_marginStart="@dimen/margin_32"
        app:layout_constraintTop_toBottomOf="@id/tvConsentTitle"
        android:text="@string/consent_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <CheckBox
        android:id="@+id/cbConsent3"
        android:gravity="top"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_20"
        android:paddingEnd="@dimen/margin_32"
        android:paddingTop="@dimen/margin_5"
        android:paddingStart="@dimen/margin_10"
        android:layout_marginStart="@dimen/margin_32"
        app:layout_constraintTop_toBottomOf="@id/tvConsentTitle"
        android:text="@string/consent_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <CheckBox
        android:id="@+id/cbConsent4"
        android:gravity="top"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_20"
        android:paddingEnd="@dimen/margin_32"
        android:paddingTop="@dimen/margin_5"
        android:paddingStart="@dimen/margin_10"
        android:layout_marginStart="@dimen/margin_32"
        app:layout_constraintTop_toBottomOf="@id/tvConsentTitle"
        android:text="@string/consent_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <CheckBox
        android:id="@+id/cbConsent5"
        android:gravity="top"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_20"
        android:paddingEnd="@dimen/margin_32"
        android:paddingTop="@dimen/margin_5"
        android:paddingStart="@dimen/margin_10"
        android:layout_marginStart="@dimen/margin_32"
        app:layout_constraintTop_toBottomOf="@id/tvConsentTitle"
        android:text="@string/consent_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <CheckBox
        android:gravity="top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginEnd="@dimen/margin_20"
        android:paddingEnd="@dimen/margin_32"
        android:paddingTop="@dimen/margin_5"
        android:paddingStart="@dimen/margin_10"
        android:layout_marginStart="@dimen/margin_32"
        app:layout_constraintTop_toBottomOf="@id/tvConsentTitle"
        android:text="@string/consent_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/nextConsent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:textColor="@color/white"
        android:backgroundTint="@color/green"
        android:layout_marginBottom="@dimen/margin_40"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/margin_32"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="Continuar"/>

</androidx.constraintlayout.widget.ConstraintLayout>