<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tvConsentTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="20sp"
        android:visibility="visible"
        android:padding="@dimen/margin_20"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/consent_title_1"/>

    <TextView
        android:id="@+id/tvEmailRequest"
        app:layout_constraintTop_toBottomOf="@+id/tvConsentTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="18sp"
        android:paddingTop="@dimen/margin_20"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_email"/>

    <Button
        android:id="@+id/btConfirmEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Confirmar email"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/margin_40"
        android:backgroundTint="@color/green"
        app:layout_constraintTop_toBottomOf="@id/editTextEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextEmail"
        android:layout_height="wrap_content"
        android:hint="@string/feedbackemail"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:inputType="textEmailAddress"
        android:layout_margin="@dimen/margin_32"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEmailRequest"
        android:layout_width="match_parent">
    </androidx.appcompat.widget.AppCompatEditText>


</androidx.constraintlayout.widget.ConstraintLayout>