<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.consent.ConsentFragment">

    <TextView
        android:id="@+id/tvConsentTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="20sp"
        android:visibility="visible"
        android:padding="@dimen/margin_20"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/consent_title_2"/>

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvConsentTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingStart="@dimen/margin_32"
            android:paddingBottom="@dimen/margin_32"
            android:paddingEnd="@dimen/margin_32"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvConsent1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:justificationMode="inter_word"
                android:text="@string/consent_description"/>

            <TextView
                android:id="@+id/tvLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/consent_link"
                android:layout_marginTop="@dimen/margin_20"
                app:layout_constraintTop_toBottomOf="@id/tvConsent1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>


            <Button
                android:id="@+id/btNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Continuar"
                android:textColor="@color/white"
                android:backgroundTint="@color/green"
                android:layout_marginTop="@dimen/margin_20"
                app:layout_constraintTop_toBottomOf="@id/tvLink"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>